# velosiped

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
include/: vls_command.h  vls_paths.h  vls_types.h
include/utils/: dir_visitor.h  dir_walker.h  error.h  fs.h  hasher.h  input_output.h  iterator.h  logger.h  md-hasher.h  md_hasher.h  stage_reader.h  stager.h  stb_ds.h  time.h  vls_writer.h
src/: main.c  vls_command.c
src/commands/: add.c  commit.c  drop.c  help.c  init.c  log.c  reset.c  status.c
src/utils/: console_writer.c  dir_walker.c  error.c  file_copy.c  fs.c  hasher.c  input_output.c  iterator.c  logger.c  stager.c  time.c  visitor.c  vls_error.c  vls_hasher.c  vls_stage.c  vls_walker.c  writer.c  xerox.c
test/.vls/commits/32131231/: commit.json  hash  msg  time
tests/integration/: smoke.sh
tests/unit/: test_fs.c  test_hasher.c
